Make updated-at mandatory
